@@ -21,25 +21,25 @@ namespace gameswf
 		". c #ffffff",
 		"  c None",
 		// pixels
-		"X                               ",
-		"XX                              ",
-		"X.X                             ",
-		"X..X                            ",
-		"X...X                           ",
-		"X....X                          ",
-		"X.....X                         ",
-		"X......X                        ",
-		"X.......X                       ",
-		"X........X                      ",
-		"X.....XXXXX                     ",
-		"X..X..X                         ",
-		"X.X X..X                        ",
-		"XX  X..X                        ",
-		"X    X..X                       ",
-		"     X..X                       ",
-		"      X..X                      ",
-		"      X..X                      ",
-		"       XX                       ",
+		"   XX                           ",
+		"  X..X                          ",
+		"  X..X                          ",
+		"  X..X                          ",
+		"  X..X                          ",
+		"  X..XXX                        ",
+		"  X..X..XXX                     ",
+		"XXX..X..X..XXX                  ",
+		"X.X..X..X..X..X                 ",
+		"X.X..X..X..X..X                 ",
+		"X....X..X..X..X                 ",
+		"X.............X                 ",
+		" X...........X                  ",
+		" X...........X                  ",
+		" X...........X                  ",
+		" X...........X                  ",
+		" XXXXXXXXXXXXX                  ",
+		" XXXXXXXXXXXXX                  ",
+		"                                ",
 		"                                ",
 		"                                ",
 		"                                ",
